--- a/TODO
+++ b/TODO
@@ -28,3 +28,8 @@ mobile swipe and underline
 improve search by title and text
 
 gauth cors error? maybe server-rize
+
+
+ctrl+click select par, shift for block, 2speech
+
+caselist intergration, ld pfd
