--- a/TODO
+++ b/TODO
@@ -1,5 +1,11 @@
-rounds - q, db orm
-file drag and drop doubling
+
+rooms for socket
+update only when needed
+
+style customization - obviously needed
+one button to cotntrol all views
+
+file drag and drop doubling, not addign new
 file drag and drop from one file to another, accepting files & folders
 
 google drive sync with this file (both ways)
